tests/transform/replace/replace_with_6/sample/output.txt
Error while processing replace_with_6.
main.c:5:36: error: expected function name after 'with' clause
#pragma spf transform replace with(baz)
                                   ^
main.c:4:9: note: declared here
  int (*baz)();
        ^
1 error generated.
Error while processing main.c.
